# funding-rate-arbitrage

./: .env.example  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/phases/01-core-trading-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-multi-pair-intelligence/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dashboard-analytics/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-historical-data-foundation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-signal-analysis-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/bot/: __init__.py  config.py  exceptions.py  logging.py  main.py  models.py  orchestrator.py
tests/: __init__.py  conftest.py  test_analytics.py  test_backtest_trades.py  test_orchestrator.py
tests/test_exchange/: __init__.py  test_bybit_client.py
tests/test_execution/: test_paper_executor.py
tests/test_market_data/: test_funding_monitor.py  test_opportunity_ranker.py
tests/test_pnl/: __init__.py  test_fee_calculator.py  test_tracker.py
tests/test_position/: __init__.py  test_delta_validator.py  test_dynamic_sizer.py  test_manager.py  test_sizing.py
tests/test_risk/: test_emergency.py  test_manager.py
tests/test_signals/: test_basis.py  test_composite.py  test_engine.py  test_persistence.py  test_trend.py  test_volume.py
(+121 files in other folders)
