[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funding-rate-arbitrage"
version = "0.1.0"
description = "Automated funding rate arbitrage bot for Bybit"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.12",
    "structlog>=25.5",
    "aiolimiter>=1.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "aiosqlite>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
funding-arb = "bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
